LIST OF CHANGES

release 105.9.0 (2025-11-03)
 - Updated find_with_attributes method of the Run ResultSet object to make
   run folder name optional. Changed the order of the attributes of the
   method. This change allows to identify existing run database records in
   cases when the run folder name has been changed and thus helps to prevent
   creating duplicate run records. The change is driven by the uncertainty
   around rules for UltimaGen platform on-instrument reanalysis.
 - Updated npg_status_save script to accept the username to be associated with
   the status this script creates. 
 - Added two new pipeline user records, 'eseq_pipeline' and 'useq_pipeline', to
   the 'user' table of the tracking database. These users should be used whenever
   the run status is updated by staging monitors or porch pipelines for the
   Elembio and Ultimagen platforms respectively.
 - Added Ultimagen staging monitor and its daemon definition.
 - Updated Ultimagen and Elembio staging monitors so that these monitors use
   'useq_pipeline' and 'eseq_pipeline' users respectively when setting run
   statuses and tags.
 - Add a new run status for UltimaGen platform "off-tool automation in
   progress". This represents processing that is not following the
   npg_seq_pipeline sequence of events and is not handled by manufacturer-
   supplied hardware.

release 105.8.1 (2025-10-09)
 - CI updates

release 105.8.0 (2025-09-01)
 - Updated instrument image generation so that the rendered image for Elembio
   instruments is correct.
 - Updated Monitor::Elembio::RunParametersParser :
   - added run_name attribute,
   - changed the attribute type of both runparams_path and runfolder_path so
     that the existence of the relevant file or directory is performed,
   - added builder methods for runparams_path and runfolder_path attributes,
   - ensured that runfolder_path attribute is used when a path of the
     RunParameters.json file is needed.

release 105.7.0 (2025-08-18)