@@ -1,5 +1,9 @@
 LIST OF CHANGES
 
+ - Consolidated functionality of the Ultimagen staging monitor in one class.
+   Monitor::Ultimagen::RunParser class is deleted, the code from this class is
+   moved to Monitor::Ultimagen::RunFolder.
+
 release 105.9.0 (2025-11-03)
  - Updated find_with_attributes method of the Run ResultSet object to make
    run folder name optional. Changed the order of the attributes of the
